Update
Fix some errors with the pagination
